--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,47 +2,34 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#field_between_header_footer {
+  height: 571px;
+}
+
 #search_field {
+  width: 33%;
+  height: 190px;
   position:relative;
-  left:0px;
-  top:20px;
-  height: 500px;
-  background: #ccffff;
+  left: 68.1%;
+  top: -340px;
+  margin-bottom:0px;
 }
 
 .search_form {
   position:relative;
-  left:25px;
-  top:20px;
-}
-
-#partial_news {
-  position:relative;
-  left:0px;
-  top:80px;
-}
-
-#main_new_field {
-  position:relative;
-  top:20px;
-  background: #ccff99;
+  left:7.5%;
+  top:30px;
 }
 
 #search {
   height: 33px;
 }
 
-.img {
-  position:relative;
-  left:0px;
-  top:-70px;
-}
-
 #clean_search {
   position:relative;
-  left: 280px;
-  top: -15px;
-  float: left;
+  left: 85%;
+  top: -10px;
+  float: center;
   margin-right: 10px;
   font-size: 1.7em;
   color: #A4A4A4;
@@ -54,8 +41,64 @@
 
   &:hover::after {
     content: attr(data-title);
-    font-size: 16px;
+    font-size: 14px;
     color: black;
     left: 20%; top: 40%;
+  }
 }
+
+#tiding_list {
+  position:relative;
+  top: 41px;
+  width: 100%;
+  height: 309px;
+}
+
+#tiding_table_pagination {
+  width: 110%;
+  position:relative;
+  left: -5%;
+}
+
+#main_new_field {
+  padding: 20px 20px 20px 20px;
+  width: 69.5%;
+  position:relative;
+  top: -7px;
+  left: -2.2%;
+  border-color: #5bc0de;
+  h4 {
+    color: #ffffff;
+  }
+  background: #ccffff;
+}
+
+#panel_heading_main_new {
+  position:relative;
+  top: -20px;
+  left: -2.9%;
+  width: 105.8%;
+  background: #5bc0de;
+  color: #ffffff;
+  border-color: #ccffff;
+}
+
+#button-dropdown-admin {
+  font-family: Arial;
+  font-weight: bold;
+  font-size: 18px;
+  height: 40px;
+}
+
+#panel-heading-search {
+  height: 60px;
+}
+
+#panel-heading-news {
+  height: 60px;
+}
+
+.header-in-panels {
+  position:relative;
+  top: -10px;
 }
