--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for :comment, url: {controller: "comments", action: "create"}, html: { class: 'test-settings-form' } , method: 'post' do |f|
+= form_for @comment, html: { class: 'comments-form' } do |f|
   - if @comment.errors.any?
     #error_explanation
       h4
@@ -7,7 +7,7 @@
         - @comment.errors.full_messages.each do |msg|
           li= msg
 
-  .col-md-3
+  .col-md-4
     .form-group
       = f.label :name
       = f.text_field :name, class: 'form-control'
