--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,10 +1,14 @@
-h2 Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+h3
+  = t '.h_forgot_password'
+= form_for(resource, as: resource_name, url: password_path(resource_name), html: { id: "form_forgot_password", method: :post }) do |f|
   = devise_error_messages!
-  .field
-    = f.label :email
-    br/
-    = f.email_field :email, autofocus: true
-  .actions
-    = f.submit "Send me reset password instructions"
+  .col-md-4
+    i
+      = t '.on_this_address'
+    .field
+      = f.label :email
+      br/
+      = f.email_field :email, autofocus: true
+    .actions
+      = f.submit t('.buttons.send_me'), class: "btn btn-info", id: "b_send_me"
 = render "devise/shared/links"
