--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -8,7 +8,7 @@ ul.nav.nav-tabs
   .tab-pane.active#tab1
     h3
       = t '.h_registration'
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = form_for(resource, html: {class: "sign_up_student"}, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
       .col-md-2
         .field
@@ -41,7 +41,7 @@ ul.nav.nav-tabs
   .tab-pane#tab2
     h3
       = t'.h_registration'
-    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {multipart: true}) do |f|
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "sign_up_teacher", multipart: true}) do |f|
       = devise_error_messages!
       .col-md-2
         .field
