--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,19 +1,19 @@
 - if controller_name != 'sessions'
-  = link_to "Логін", new_session_path(resource_name)
+  = link_to t('.buttons.login'), new_session_path(resource_name)
   br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "Реєстрація", new_registration_path(resource_name)
+  = link_to t('.buttons.sign_up'), new_registration_path(resource_name)
   br/
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to "Забув пароль?", new_password_path(resource_name)
+  = link_to t('.buttons.forgot_password'), new_password_path(resource_name)
   br/
 - if devise_mapping.confirmable? && controller_name != 'confirmations'
-  = link_to "Не отримали інструкції для підтвердження акаунту?", new_confirmation_path(resource_name)
+  = link_to t('.buttons.dont_resive_instructions'), new_confirmation_path(resource_name)
   br/
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  = link_to "Не отримали інструкції для розблокуванння акаунту?", new_unlock_path(resource_name)
+  = link_to t('.buttons.dont_resive_instructions_to_unbloc'), new_unlock_path(resource_name)
   br/
 - if devise_mapping.omniauthable?
   - resource_class.omniauth_providers.each do |provider|
-    = link_to "Зайти із#{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider)
+    = link_to t('.buttons.come_from'), omniauth_authorize_path(resource_name, provider)
     br/
