--- a/app/views/teachers/test_settings/index.html.slim
+++ b/app/views/teachers/test_settings/index.html.slim
@@ -1,5 +1,3 @@
-= render 'shared/user_menu'
-
 .col-md-12
   h3
     = t('.h_tests')
@@ -7,5 +5,5 @@
   #test_settings_partial
     = render 'test_setting'
 
-.col-md-12#b
-  = link_to t('.buttons.back'), root_path
+  .col-md-8#b_back_test_setting_new
+    = link_to t('.buttons.back'), root_path
