--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,7 +1,7 @@
 header
   p.main_header
     = t '.h_main_header'
-  naw.navbar.navbar.navbar-default
+  naw.navbar.navbar-info
     .navbar-inner
       ul.nav.navbar-nav
         / .btn-group
