--- a/app/views/welcome/_tidings.html.slim
+++ b/app/views/welcome/_tidings.html.slim
@@ -1,4 +1,4 @@
-.panel.panel-info#tiding_list
+.panel.panel-info.col-md-16#tiding_list
   .panel-heading#panel-heading-news
     h4.header-in-panels
       = t('.h_news')
