--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -4,24 +4,10 @@
       h4.header-in-panel-main-new
         = @post.try(:title)
     .panel-body
+      = render partial: 'carousel'
+      hr.main-new-hr
       = @post.try(:text)
-    hr.main-new-hr
-    - if !@post.blank?
-      - @post.photos.each do |photo|
-        = image_tag(photo.url(:thumb), class: "main-new-photo")
-
-  .panel.panel-info.col-md-4#search_field
-    .panel-heading#panel-heading-search
-      h4.header-in-panels
-        = t('.h_search')
-    .panel-body
-      = form_tag(search_welcome_index_path, method: "get", class: "search_form") do
-        = text_field_tag :search, params[:search], placeholder: t('.placeholder_search')
-        = submit_tag t('.search'), class: "btn btn-info"
-
-      = link_to "#", id: "clean_search_field" do
-        i#clean_search.fa.fa-remove.fa-3x data-title=t('.search_clear')
 
   .col-md-4
-    #partial_news
-      = render partial: 'tidings'
+    = render partial: 'right_panel'
+
