--- a/app/views/welcome/show.html.slim
+++ b/app/views/welcome/show.html.slim
@@ -1,8 +1,15 @@
-.col-md-12
-  h3
-    = @tiding.title
+h3
+  = @tiding.title
+
+.col-md-8#carusel-on-show-page
+    = render partial: 'carousel'
+
+.col-md-3#right-panel
+  = render partial: 'right_panel'
+
+.col-md-8#tiding-text-show-page
   = @tiding.text
 
-.col-md-12
+.col-md-8
   br
   = link_to t('.buttons.back'), :back
