--- a/app/assets/stylesheets/admin/student.scss
+++ b/app/assets/stylesheets/admin/student.scss
@@ -1,12 +1,10 @@
       /* index */
-#admin_table_with_students {
+#admin-table-with-students {
   position:relative;
-  left:220px;
-  top:0px;
+  left:26%;
 }
 
-#admin_student_table_pagination {
+#admin-student-table-pagination {
   position:relative;
-  left:470px;
-  top:0px;
+  left:40%;
 }
