--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,6 +27,21 @@
 //
 // Example:
 // @link-color: #ff0000;
+html, body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+
+#container {
+   min-height:100%;
+   position:relative;
+}
+
+#body {
+   padding:10px;
+   padding-bottom:50px;
+}
 
 #error_explanation {
   border: 1px solid #0071B5;
@@ -82,6 +97,8 @@ h1, h2, h3, h4 {
 }
 
 .alert {
+  position:relative;
+  top:-45px;
   text-align: center;
   font-weight: bold;
   color: #0071B5 !important;
@@ -150,14 +167,19 @@ header {
 
 /*footer*/
 footer {
-    background: #7e7e7e;
-    color: #dbdbdb;
-    font-size: 11px;
+  background: #7e7e7e;
+  color: #dbdbdb;
+  font-size: 11px;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:50px;
+
   .container {
-      height: 50px;
-      padding: 10px 10px 10px 10px;
-      position: relative;
-      bottom: 0; left: 0;
+    height: 50px;
+    padding: 10px 10px 10px 10px;
+    position: relative;
+    bottom: 0; left: 0;
   }
 }
 
@@ -166,19 +188,4 @@ footer {
   font-size: 1.5em;
   position:relative;
   left:75%;
-}
-
-#overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  filter:alpha(opacity=50);
-  -moz-opacity:0.5;
-  -khtml-opacity: 0.5;
-  opacity: 0.96;
-  z-index: 10000;
-  display: none;
 }
