--- a/app/assets/stylesheets/students/test.scss
+++ b/app/assets/stylesheets/students/test.scss
@@ -31,3 +31,18 @@
 #attention-text {
   color: red;
 }
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  filter:alpha(opacity=50);
+  -moz-opacity:0.5;
+  -khtml-opacity: 0.5;
+  opacity: 0.96;
+  z-index: 10000;
+  display: none;
+}
