--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -3,8 +3,8 @@ html
   head
     meta content="text/html; charset=UTF-8" http-equiv="Content-Type"
     title SchoolTest
-    = stylesheet_link_tag    "not_admin", media: "all"
-    = javascript_include_tag "not_admin"
+    = javascript_include_tag "admin"
+    = stylesheet_link_tag "admin"
     = csrf_meta_tags
   body
     .wrapper.container#container
