--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -43,6 +43,10 @@ html, body {
    padding-bottom:50px;
 }
 
+#body {
+   padding:10px;
+   padding-bottom:50px;
+}
 #error_explanation {
   border: 1px solid #0071B5;
   padding: 7px;
