--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -41,6 +41,11 @@ input.carrier {
   height: 300px;
 }
 
+#b-cancel-account {
+  height: 40px;
+  width: 175px;
+}
+
 /*sign in*/
 .sign_in_form {
   height: 465px;
