--- a/app/views/admin/tidings/_form.html.slim
+++ b/app/views/admin/tidings/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [:admin, @tiding], method: 'post' do |f|
+= form_for [:admin, @tiding], html: { class: 'tidings-form',  multipart: true }, method: 'post' do |f|
   - if @tiding.errors.any?
       #error_explanation
         h4
@@ -18,10 +18,20 @@
       = f.check_box :main
     .form-group
       b
+        = t('.choose_primary_photo')
+      br
+      = f.fields_for :images do |img|
+        = img.hidden_field(:primary, value: true)
+        = img.label :photos do
+          = img.file_field :photos, multiple: true
+    .form-group
+      b
         = t('.choose_photos')
       br
-      = f.label :photos do
-        = f.file_field :photos, multiple: true
+      = f.fields_for :images do |img|
+        = img.label :photos do
+          = img.file_field :photos, multiple: true
+
     .form-group
       br
       = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
