--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -28,7 +28,7 @@ ul.nav.nav-tabs
               = '.min_password_length'
           = f.password_field :password, autocomplete: "off"
         .field
-          = f.label :password_confirmation, t('.password_confirmation')
+          = f.label :password_confirmation
           br
           = f.password_field :password_confirmation, autocomplete: "off"
         br
@@ -64,12 +64,19 @@ ul.nav.nav-tabs
           = f.label :password_confirmation
           br
           = f.password_field :password_confirmation, autocomplete: "off"
+        / .field
+        /   b
+        /     = t('.choose_avatar')
+        /   = f.label :avatar do
+        /     = f.file_field :avatar, class: "carrier"
+        /     = f.hidden_field :avatar_cache
         .field
           b
             = t('.choose_avatar')
-          = f.label :avatar do
-            = f.file_field :avatar, class: "carrier"
-            = f.hidden_field :avatar_cache
+          br
+          = f.fields_for :image, @user.image do |img|
+            = img.label :photos do
+              = img.file_field :photos, multiple: true
         br
         .actions
           = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
