create polymorphic association user-photo and tiding-photo

--- a/app/assets/stylesheets/admin/tiding.scss
+++ b/app/assets/stylesheets/admin/tiding.scss
@@ -42,3 +42,13 @@
   position: relative;
   left: 35%;
 }
+
+.tiding-photo-checkbox {
+  position: relative;
+  left: 10%;
+}
+
+#field-with-images {
+  position: relative;
+  left: 7%;
+}
