--- a/app/views/admin/tidings/_form.html.slim
+++ b/app/views/admin/tidings/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [:admin, @tiding], html: { class: 'tidings-form',  multipart: true }, method: 'post' do |f|
+= form_for [:admin, @tiding], html: { class: 'tidings-form',  multipart: true } do |f|
   - if @tiding.errors.any?
       #error_explanation
         h4
@@ -18,20 +18,14 @@
       = f.check_box :main
     .form-group
       b
-        = t('.choose_primary_photo')
-      br
-      = f.fields_for :images do |img|
-        = img.hidden_field(:primary, value: true)
-        = img.label :photos do
-          = img.file_field :photos, multiple: true
-    .form-group
-      b
         = t('.choose_photos')
       br
-      = f.fields_for :images do |img|
-        = img.label :photos do
-          = img.file_field :photos, multiple: true
-
+      ol
+        = f.fields_for :images do |img|
+          = render 'image_fields', f: img
+        hr
+        .l_add_photo#links_q_a
+          = link_to_add_fields t('.buttons.add_photo'), f, :images
     .form-group
       br
       = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
