--- a/app/views/admin/tidings/edit.html.slim
+++ b/app/views/admin/tidings/edit.html.slim
@@ -3,5 +3,11 @@ h3
 
 = render "form"
 
+.col-md-6#field-with-images
+  ol
+    - @tiding.images.each do |imag|
+      li
+        = image_tag(imag.photo.url(:small))
+
 .col-md-12
   = link_to t('.buttons.back'), admin_tidings_path
