--- a/app/views/admin/students/edit.html.slim
+++ b/app/views/admin/students/edit.html.slim
@@ -25,6 +25,6 @@
 
     .actions
       br
-      = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
+      = f.submit t('buttons.submit'), class: "btn btn-info", id: "b_registration"
     br
-      = link_to t('.buttons.back'), admin_students_path
+      = link_to t('buttons.back'), admin_students_path
