--- a/app/views/admin/tidings/_form.html.slim
+++ b/app/views/admin/tidings/_form.html.slim
@@ -28,4 +28,4 @@
           = link_to_add_fields t('.buttons.add_photo'), f, :images
     .form-group
       br
-      = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
+      = f.submit t('buttons.submit'), class: "btn btn-info", id: "b_registration"
