--- a/app/views/admin/tidings/edit.html.slim
+++ b/app/views/admin/tidings/edit.html.slim
@@ -10,4 +10,4 @@ h3
         = image_tag(imag.photo.url(:small))
 
 .col-md-12
-  = link_to t('.buttons.back'), admin_tidings_path
+  = link_to t('buttons.back'), admin_tidings_path
