--- a/app/views/students/test_settings/show.html.slim
+++ b/app/views/students/test_settings/show.html.slim
@@ -54,7 +54,7 @@
         #you_couldnt_try
           = t '.the_end'
         br
-      = link_to t('.buttons.back'), students_test_settings_path
+      = link_to t('buttons.back'), students_test_settings_path
 
 javascript:
   $(document).ready(function() {
