--- a/app/views/students/tests/_form.html.slim
+++ b/app/views/students/tests/_form.html.slim
@@ -15,7 +15,7 @@
           = builder.hidden_field :user_id
           br
     br
-    = f.submit t('.buttons.save'), class: "btn btn-info", id: "b_save_result"
+    = f.submit t('buttons.save'), class: "btn btn-info", id: "b_save_result"
 
 javascript:
   $(document).ready(function() {
