--- a/app/views/teachers/test_settings/_answer_setting_fields.html.slim
+++ b/app/views/teachers/test_settings/_answer_setting_fields.html.slim
@@ -6,5 +6,5 @@
       = f.label :rigth, t('.mark_if_right')
       = f.check_box :rigth
       br
-      = link_to_remove_fields  t('.buttons.remove'), f
+      = link_to_remove_fields  t('buttons.remove'), f
 
