--- a/app/views/teachers/test_settings/edit.html.slim
+++ b/app/views/teachers/test_settings/edit.html.slim
@@ -4,6 +4,6 @@ h3
 = render 'form'
 
 .col-md-12#b_back_test_setting_new
-  = link_to t('.buttons.show'), teachers_test_setting_path
+  = link_to t('buttons.show'), teachers_test_setting_path
   br
-  = link_to t('.buttons.back'), teachers_test_settings_path
+  = link_to t('buttons.back'), teachers_test_settings_path
