--- a/app/views/teachers/test_settings/index.html.slim
+++ b/app/views/teachers/test_settings/index.html.slim
@@ -6,4 +6,4 @@
     = render 'test_setting'
 
   .col-md-8#b_back_test_setting_new
-    = link_to t('.buttons.back'), root_path
+    = link_to t('buttons.back'), root_path
