--- a/app/views/teachers/test_settings/new.html.slim
+++ b/app/views/teachers/test_settings/new.html.slim
@@ -4,4 +4,4 @@ h3
 = render 'form'
 
 .col-md-12#b_back_test_setting_new
-  = link_to t('.buttons.back'), root_path
+  = link_to t('buttons.back'), root_path
