--- a/app/views/teachers/test_settings/show.html.slim
+++ b/app/views/teachers/test_settings/show.html.slim
@@ -26,6 +26,6 @@
     = render 'test_results'
 
   .col-md-12#b_back_test_setting_show
-    = link_to t('.buttons.edit'), edit_teachers_test_setting_path
+    = link_to t('buttons.edit'), edit_teachers_test_setting_path
     br
-    = link_to t('.buttons.back'), teachers_test_settings_path
+    = link_to t('buttons.back'), teachers_test_settings_path
