--- a/app/views/admin/tidings/_image_fields.html.slim
+++ b/app/views/admin/tidings/_image_fields.html.slim
@@ -5,4 +5,4 @@
       = f.label :photo do
         = f.file_field :photo, class: "tiding-photo-checkbox"
       = f.hidden_field :_destroy
-      = link_to_remove_fields t('.buttons.remove'), f
+      = link_to_remove_fields t('buttons.remove'), f
