--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -17,4 +17,4 @@
       - if user_signed_in?
         = f.hidden_field :user_id, value: current_user.id
     .actions
-      = f.submit t('.buttons.submit'), class: "btn btn-info"
+      = f.submit t('buttons.submit'), class: "btn btn-info"
