--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -41,4 +41,4 @@ h3
   p
     = t('.unhappy')
     = button_to t('.buttons.cancel_account'), registration_path(resource_name), data: { confirm: "t('.are_you_sure')" }, method: :delete, class: "btn btn-danger"
-  = link_to t('.buttons.back'), :back
+  = link_to t('buttons.back'), :back
