--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,8 +1,8 @@
 - if controller_name != 'sessions'
-  = link_to t('.buttons.login'), new_session_path(resource_name)
+  = link_to t('buttons.login'), new_session_path(resource_name)
   br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to t('.buttons.sign_up'), new_registration_path(resource_name)
+  = link_to t('buttons.sign_up'), new_registration_path(resource_name)
   br/
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
   = link_to t('.buttons.forgot_password'), new_password_path(resource_name)
