--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -4,15 +4,7 @@ header
   naw.navbar.navbar-info
     .navbar-inner
       ul.nav.navbar-nav
-        / .btn-group
-        /   button.btn.btn-info.dropdown-toggle data-toggle="dropdown" type="button"
-        /     = t('.buttons.language')
-        /     span.caret
-        /   ul.dropdown-menu role="menu"
-        /     li
-        /       = link_to_unless_current "English", locale: "en"
-        /     li
-        /       = link_to_unless_current "Українська", locale: "ua"
+
         - if user_signed_in?
           - if current_user.has_role? :student
             li.pull-right= link_to t('.buttons.pass_test'), students_test_settings_path
@@ -41,9 +33,18 @@ header
           li.pull-right= link_to t('.buttons.sign_out'), destroy_user_session_path, method: :delete
           li.pull-right= link_to t('.buttons.edit_profile'), edit_user_registration_path
         - else
-          li.pull-right= link_to t('.buttons.register'), new_user_registration_path
-          li.pull-right= link_to t('.buttons.log_in'), new_user_session_path
+          li.pull-right= link_to t('buttons.sign_up'), new_user_registration_path
+          li.pull-right= link_to t('buttons.login'), new_user_session_path
         li= link_to t('.buttons.main'), root_path
         li.pull-right= link_to t('.buttons.comments'), new_comment_path
         li.pull-right= link_to t('.buttons.teachers'), users_path
 
+  / .btn-group#b-language
+  /   button.btn.btn-info.dropdown-toggle data-toggle="dropdown" type="button"
+  /     = t('.buttons.language')
+  /     span.caret
+  /   ul.dropdown-menu role="menu"
+  /     li
+  /       = link_to_unless_current "English", locale: "en"
+  /     li
+  /       = link_to_unless_current "Українська", locale: "ua"
