--- a/app/views/welcome/_tidings.html.slim
+++ b/app/views/welcome/_tidings.html.slim
@@ -2,7 +2,7 @@
   .panel-heading#panel-heading-news
     h4.header-in-panels
       = t('.h_news')
-  .panel-body
+  .panel-body#list-tiding-headers
     - @tidings.each do |tiding|
       ul.ul_list_style
         li
