fix main page css configuration and main page pagination

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -194,8 +194,7 @@ footer {
   left:75%;
 }
 
-#b-language {
-  position:absolute;
-  top: 134px;
-  left:86.5%;
+.pagination {
+  font-size: 12px;
+  font-weight: bold;
 }
