--- a/app/views/welcome/_right_panel.html.slim
+++ b/app/views/welcome/_right_panel.html.slim
@@ -1,4 +1,4 @@
-.panel.panel-info.col-md-12#search_field
+.panel.panel-info#search_field
   .panel-heading#panel-heading-search
     h4.header-in-panels
       = t('.h_search')
@@ -10,6 +10,5 @@
     = link_to "#", id: "clean_search_field" do
       i#clean_search.fa.fa-remove.fa-3x data-title=t('.search_clear')
 
-.col-md-12
-  #partial_news
-    = render partial: 'tidings'
+#partial_news
+  = render partial: 'tidings'
